init yangmao radar h5

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>羊毛雷达 - 初版</h1><p>你好，Mr XU！页面已成功运行。</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>羊毛雷达</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>羊毛雷达 - 拼多多百亿补贴</h1>
+  <div id="content">正在加载数据...</div>
+  <script src="script.js"></script>
+</body>
+</html>
