--- a/repair.html
+++ b/repair.html
@@ -67,7 +67,7 @@
   <label>备注（可选）</label>
   <textarea id="note" placeholder="例如：下午 2 点后有人"></textarea>
 
-  <button onclick="submitTicket()">提交报修</button>
+  <button onclick="submitRepair()">提交报修</button>
 </div>
 
 <script src="repair.js"></script>
