--- a/repair.html
+++ b/repair.html
@@ -66,6 +66,15 @@
 
   <label>备注（可选）</label>
   <textarea id="note" placeholder="例如：下午 2 点后有人"></textarea>
+<div style="margin-bottom:12px;">
+  <label>报修标题（必填）</label><br>
+  <input
+    id="title"
+    type="text"
+    placeholder="例如：打印机无法使用"
+    style="width: 100%; padding: 8px;"
+  />
+</div>
 
   <button onclick="submitRepair()">提交报修</button>
 </div>
