--- a/repair.html
+++ b/repair.html
@@ -222,14 +222,15 @@
       </div>
     </div>
 
-    <div class="actions">
-      <button class="btn btn-primary" onclick="submitTicket(event)">
-        提交工单
-      </button>
-      <button class="btn btn-secondary" onclick="resetForm()">
-        清空重填
-      </button>
-    </div>
+   <div class="actions">
+  <button type="submit" class="btn btn-primary" id="submitBtn">
+    提交工单
+  </button>
+  <button type="button" class="btn btn-secondary" onclick="resetForm()">
+    清空重填
+  </button>
+</div>
+
 
     <footer>© IT 运维系统 · 内部使用</footer>
   </div>
